# irbfn

./: .gitignore  .gitmodules  Dockerfile  LICENSE  README.md  evaluate.py  evaluate_2D_mpc.py  evaluate_goal_mpc.py  evaluate_mlp.py  evaluate_mpc.py  evaluate_newlut.py  evaluate_nmpc.py  gen_traj_1.py  gen_traj_2.py  gen_traj_3.py  gen_traj_4.py  gen_traj_5.py  gen_traj_goal_lite.py  genlut.py  goal_mpc_data_generator.py  goal_mpc_node.py  local_requirements.txt  model.py  mpc.py  nmpc_data_generator.py  nuplan_utils.py  observation.py  planner.py  ppo.py  pyproject.toml  requirements.txt  rl.py  run_container.sh  test_data.py  test_data_generator.py  test_irbfn.py  train.py  train_goal_mpc.py  train_mlp.py  train_newlut.py  (+2 more)
configs/: 20230413_210945_bs2000_lr0.001_nk100_11x10y8t_inverse_quadratic_kernel_l2_newlut.yaml  20230414_170913_bs2000_lr0.001_nk100_11x10y8t_inverse_quadratic_kernel_l2_allkappalut.yaml  20230831_095141_bs2000_lr0.001_nk100_11x10y8t_inverse_quadratic_kernel_l2_allkappalut.yaml  20230831_102829_bs2000_lr0.001_nk100_22x10y8t_inverse_quadratic_kernel_l2_allkappalut.yaml  20230831_110809_bs2000_lr0.001_nk100_22x20y8t_inverse_quadratic_kernel_l2_allkappalut.yaml  20230831_124054_bs2000_lr0.001_nk100_11x10y8t_inverse_quadratic_kernel_l2_allkappalut.yaml  2D_quadrotor_mpc.yaml  default.yaml
deprecated/: 2D_quadrotor_MPC.py  2D_quadrotor_data_generator.py  evaluate_newlut.py  gen_traj.py  gen_traj_goals.py  goal_mpc_node.py  mpc.py  mpc_node.py  nmpc_data_generator.py  planner.py  ppo.py  test_data_generator.py  train.py  train_2D_mpc.py  train_newlut.py  (+1 more)
(+2586 files in other folders)
